UPdated code for secure connection